@@ -6,6 +6,7 @@ import java.io.IOException;
 import java.nio.charset.Charset;
 
 import org.ait.module.java.unittest.JsonTester;
+import org.apache.commons.io.IOUtils;
 import org.json.JSONException;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Order;
@@ -37,8 +38,9 @@ public class CustomerOrderDTOTest
 		// serialize the object to test, into JSON
 		String actual = om.writeValueAsString(getObjectToTest());
 		
-		// compare the expected JSON provided, against the JSON written by the ObjectMapper 
-		JSONAssert.assertEquals(new String(getSourceJson().readAllBytes(), Charset.defaultCharset()), actual, JSONCompareMode.STRICT);
+		// compare the expected JSON provided, against the JSON written by the ObjectMapper
+		byte[] source= IOUtils.toByteArray(getSourceJson());
+		JSONAssert.assertEquals(new String(source, Charset.defaultCharset()), actual, JSONCompareMode.STRICT);
 	}
 	
 	@Order(2)
